<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PdvDesk</string>
    <string name="title_activity_sells">SellsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sell">SellActivity</string>
    <string name="sale_title">Venda de Crédito</string>
    <string name="sale_type">Tipo de Venda</string>
    <string name="sale_content">Identificação</string>
    <string name="amount">Valor</string>
    <string name="print">Imprimir Comprovante</string>
    <string name="created_at">Data da compra</string>
    <string name="login_error">Usuario ou senha incorretos</string>
    <string name="server_error">Erro ao conectar, tente denovo</string>
    <string name="cancel_sale">Cancelar Venda</string>
    <string name="title_unknown_device">Dispositivo desconhecido</string>
    <string name="title_print_self_test">Teste da Impressora</string>
    <string name="title_print_text">Imprimir</string>
    <string name="title_address">Endereco</string>
    <string name="title_connect">conectar</string>
    <string name="title_bluetooth_disabled">bluetooth desabilitado</string>
    <string name="title_scan">procurar dispositivos</string>
    <string name="title_exit">Sair</string>
    <string name="title_print_image">Imprimir Imagem</string>
    <string name="title_print_page">Imprimir Pagina</string>
    <string name="title_print_barcode">Imprimir Codigo de barras</string>
    <string name="title_read_card">Lendo cartao</string>
    <string name="title_read_barcode">Ler codigo de barras</string>
    <string name="cancel_print">Cancelar Impressao</string>
    <string name="print_sale_confirm">Imprimir Comprovante</string>
    <string name="title_scanning">Procurando Dispositivos</string>
    <string name="title_select_device">Escolher Dispositivo</string>
    <string name="msg_paper_ready">tem papel</string>
    <string name="msg_read_encrypted_card">lendo card criptografado</string>
    <string name="msg_no_paper">Impressora sem papel</string>
    <string name="msg_low_battery">impressora com pouca bateria</string>
    <string name="msg_overheated">super aquecimento</string>
    <string name="title_please_wait">Aguarde...</string>
    <string name="msg_failed_to_init">falha para iniciar</string>
    <string name="msg_failed_to_connect">falha ao conectar</string>
    <string name="msg_connecting">conectando</string>
    <string name="msg_printing_page">imprimindo comprovante</string>
    <string name="title_warning">erro</string>
    <string name="msg_unsupport_page_mode">metodo nao suportado</string>
    <string name="msg_failed_to_print_page">erro ao imprimir comprovante</string>
    <string name="ask_to_exit">Deseja Sair?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="information">Informação</string>
    <string name="loading">Processando</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_toten_sales">Compras do Toten</string>
    <string name="title_card_sell">Vender Cartão</string>
    <string name="title_card_recharge">Recarregar Cartão</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="toten_sales">Vendas no Terminal</string>
    <string name="card_recharge">Recarga de Cartão</string>
    <string name="sell_card">Venda de Cartão</string>
    <string name="title_activity_card_sell">CardSell</string>
    <string name="title_activity_card_recharge">CardRechargeActivity</string>
    <string name="card_sell_error">Erro ao vender Cartão</string>
    <string name="title_activity_sales2">Sales2Activity</string>
    <string name="confirm">Confirmar Pagamento</string>
    <string name="cancel_success">Cancelado com Sucesso</string>
    <string name="card_sell">Venda do Cartão</string>
    <string name="recharge_sell">Venda de Recarga</string>
</resources>
