<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c0c0c0"
        android:padding="5dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:text="@string/title_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/device_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"            
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textUri"
            android:lines="1"
            android:visibility="gone" >
        </EditText>

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_connect" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/title_disabled"
        android:layout_width="fill_parent"
        android:layout_height="121dp"
        android:gravity="center"
        android:text="@string/title_bluetooth_disabled"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/devices_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:stackFromBottom="false" />

    <LinearLayout
        android:id="@+id/scanLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c0c0c0"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center" >

        <Button
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.7"
            android:text="@string/title_scan" />

        <Button
            android:id="@+id/exit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:text="@string/title_exit" />

    </LinearLayout>

</LinearLayout>