<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.expark.pdvdesk.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/toten_sales"
            android:id="@+id/button"
            android:onClick="toSalesActivity"
            android:background="@drawable/expark_btn_default_holo_dark"
            android:textColor="#ffffffff" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sell_card"
            android:id="@+id/button2"
            android:onClick="toCardSellActivity"
            android:background="@drawable/expark_btn_default_holo_dark"
            android:textColor="#ffffffff" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_recharge"
            android:id="@+id/button3"
            android:onClick="toCardRechargeActivity"
            android:background="@drawable/expark_btn_default_holo_dark"
            android:textColor="#ffffffff" />
    </LinearLayout>
</RelativeLayout>
