<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="br.com.expark.pdvdesk.SaleActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sale_title"
            android:id="@+id/sale_title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sale_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:shrinkColumns="*"  android:stretchColumns="*" android:background="#ffffff">

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sale_type"
                    android:id="@+id/textView6"
                    android:layout_weight="50"
                    android:maxWidth="100dp"
                    android:minWidth="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Conta Web"
                    android:id="@+id/sale_type_receiver"
                    android:layout_weight="50" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sale_content"
                    android:id="@+id/content"
                    android:layout_weight="50"
                    android:maxWidth="100dp"
                    android:minWidth="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/sale_content_receptor"
                    android:layout_weight="50"
                    android:text="João da Silva" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/amount"
                    android:id="@+id/amount"
                    android:layout_weight="50"
                    android:minWidth="100dp"
                    android:maxWidth="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="R$ 23,00"
                    android:id="@+id/sale_amount_receptor"
                    android:layout_weight="50" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/created_at"
                    android:layout_weight="50"
                    android:minWidth="100dp"
                    android:maxWidth="100dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="R$ 23,00"
                    android:id="@+id/created_at"
                    android:layout_weight="50" />
            </TableRow>
        </TableLayout>



            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/button_print"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.14"
                android:layout_below="@+id/table"
                android:background="#ff3bb332"
                android:layout_marginTop="20sp"
                android:enabled="true"
                android:textColorHighlight="#ffebffec"
                android:onClick="confirmSell"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/button_print"
            android:background="#ffff3b19"
            android:layout_marginTop="20sp"
            android:enabled="true"
            android:textColorHighlight="#ffffff"
            android:text="@string/cancel_sale"
            android:onClick="cancelSell"/>

    </RelativeLayout>
</ScrollView>